samples/_failures_safe/1761729837_ed614c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5b3c611c.c: In function ‘main’:
./samples/SAFE/__tmp_5b3c611c.c:151:21: error: expected declaration or statement at end of input
  151 |                     printf("Matrix addition failed: dimension mismatch or integer overflow.\n");
      |                     ^~~~~~
./samples/SAFE/__tmp_5b3c611c.c:151:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_5b3c611c.c:151:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_5b3c611c.c:151:21: error: expected declaration or statement at end of input
